--- a/_layouts/resume.html
+++ b/_layouts/resume.html
@@ -13,7 +13,7 @@
 
         <!-- You can turn off the avatar in _config.yml by setting to false -->
         {% if site.resume_avatar == 'true' %}
-        <img src="images/femalecodertocat.png" alt="my photo" class="avatar no-print" itemprop="image">
+        <img src="images/img_woman_flowers_collage.png" alt="my photo" class="avatar no-print" itemprop="image">
         {% endif %}
 
         <!-- Your name is defined in the _config.yml file -->
@@ -220,14 +220,10 @@
       </section>
       <!-- end Print Social Links -->
       {% endif %}
-
       <footer class="page-footer">
-        <p class="footer-line">Made by <a href="http://twitter.com/jglovier">@jglovier</a>. Fork me on <a href="https://github.com/jglovier/resume-template">GitHub</a>.</p>
-        <p class="footer-line">If this is your live resume, you can modify or remove this part. ;-)</p>
+        <p class="footer-line">Made with &#10083; by <a href="https://twitter.com/the_flucs">Sabrina</a>.</p>
+        <p>Thanks to <a href="https://twitter.com/jglovier">jglovier</a> &#128522; </p>
       </footer>
-
     </div>
-
   </body>
-
 </html>
