--- a/_layouts/resume.html
+++ b/_layouts/resume.html
@@ -185,7 +185,7 @@
       <!-- end Interests -->
       {% endif %}
 
-       {% if site.resume_section_links %}
+       {% if site.resume_section_books %}
       <!-- begin Books -->
       <section class="content-section">
 
