--- a/_layouts/resume.html
+++ b/_layouts/resume.html
@@ -190,7 +190,7 @@
       <section class="content-section">
 
         <header class="section-header">
-          <h2>3 books</h2>
+          <h2>3 Books</h2>
         </header>
 
         <div class="resume-item">
