--- a/_sass/_mixins.scss
+++ b/_sass/_mixins.scss
@@ -91,13 +91,13 @@
 // layout
 
 @mixin section_border {
-  border-top: 4px solid #c7c7c7;
-  border-bottom: 2px solid #c7c7c7;
+  border-top: 4px solid #fba194;
+  border-bottom: 2px solid #699490;
   padding: .2rem 0 .4rem;
 }
 
 @mixin section_border_thin {
-  border-top: 1px solid #c7c7c7;
-  border-bottom: 1px solid #c7c7c7;
+  border-top: 1px solid #fba194;
+  border-bottom: 1px solid #699490;
   padding: .2rem 0 .2rem;
 }
