--- a/_sass/_resume.scss
+++ b/_sass/_resume.scss
@@ -80,7 +80,7 @@
   position: relative;
   top: 4px;
   text-align: center;
-  border-top: 2px solid #fba194;
+  border-top: 2px solid #de9e88;
   padding-top: .4rem;
 
   @include media_larger_than_mobile {
@@ -105,7 +105,7 @@
 
 .contact-button {
   @include border-radius(3px);
-  background-color: #efefef;
+  background-color: #de9e88;
   text-decoration: none;
   text-align: center;
   display: block;
@@ -172,7 +172,7 @@
 // footer styles
 
 .page-footer {
-  border-top: 4px solid #fba194;
+  border-top: 4px solid #de9e88;
   padding-top: 1.5rem;
   text-align: center;
   margin-bottom: 3rem;
